--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ build:
 
 test_script:
 - cmd: >-
-    .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user  -output:opencoverCoverage.xml -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:\"%cd%\..\src\ProjectSample.Infrastructure.Framework.UnitTests\bin\Debug\ProjectSample.Infrastructure.Framework.UnitTests.dll\" /testcontainer:\"%cd%\..\src\ProjectSample.Domain.UnitTests\bin\Debug\ProjectSample.Domain.UnitTests.dll\"" -targetdir:"%cd%\..\src\ProjectSample.Infrastructure.Framework.UnitTests\bin\Debug" -filter:"+[*]ProjectSample.* -[*.UnitTests]*"
+    .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user  -output:opencoverCoverage.xml -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:\"%cd%\src\ProjectSample.Infrastructure.Framework.UnitTests\bin\Debug\ProjectSample.Infrastructure.Framework.UnitTests.dll\" /testcontainer:\"%cd%\..\src\ProjectSample.Domain.UnitTests\bin\Debug\ProjectSample.Domain.UnitTests.dll\"" -targetdir:"%cd%\src\ProjectSample.Infrastructure.Framework.UnitTests\bin\Debug" -filter:"+[*]ProjectSample.* -[*.UnitTests]*"
 
 
 
