--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ build:
   verbosity: minimal
 
 after_build:
-- cmd: C:\Program Files (x86)\Microsoft Fxcop 10.0\FxCopCmd.exe /project:".\src\ProjectSample.FxCop" /out:fxcop-report.xml
+- cmd: "C:\Program Files (x86)\Microsoft Fxcop 10.0\FxCopCmd.exe" /project:.\src\ProjectSample.FxCop /out:fxcop-report.xml
 
 test_script:
 - cmd: >-
