--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,14 @@
 version: 1.0.{build}
 os: Visual Studio 2015
-configuration: Debug
+configuration: DEV
 environment:
   COVERALLS_REPO_TOKEN:
     secure: ZBet0jXhjfGiKMNBM1EhMlHV20Oe/SfRZ1fzmhbnM88NJ43PCXhEz9bFYRTr5UO/
 install:
 - cmd: 
 nuget:
-  account_feed: true
-  project_feed: true
+  account_feed: false
+  project_feed: false
 before_build:
 - cmd: nuget restore .\src\ProjectSample.sln
 build:
@@ -21,10 +21,11 @@ after_build:
 
 test_script:
 - cmd: >-
-    .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user  -output:opencoverCoverage.xml -target:"vstest.console.exe" -targetargs:"/logger:Appveyor \"%cd%\src\ProjectSample.Infrastructure.Framework.UnitTests\bin\Debug\ProjectSample.Infrastructure.Framework.UnitTests.dll\" \"%cd%\src\ProjectSample.Domain.UnitTests\bin\Debug\ProjectSample.Domain.UnitTests.dll\"" -targetdir:"%cd%\src\ProjectSample.Domain.UnitTests\bin\Debug" -filter:"+[*]ProjectSample.* -[*.UnitTests]*"
+    .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user  -output:opencoverCoverage.xml -target:"vstest.console.exe" -targetargs:"/logger:Appveyor \"%cd%\src\ProjectSample.Infrastructure.Framework.UnitTests\bin\DEV\ProjectSample.Infrastructure.Framework.UnitTests.dll\" \"%cd%\src\ProjectSample.Domain.UnitTests\bin\DEV\ProjectSample.Domain.UnitTests.dll\"" -targetdir:"%cd%\src\ProjectSample.Domain.UnitTests\bin\DEV" -filter:"+[*]ProjectSample.* -[*.UnitTests]*"
 
     .\src\packages\coveralls.net.0.6.0\tools\csmacnz.Coveralls.exe --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
 
 artifacts:
-- path: .\fxcop-report.xml
-  name: FxCop report   
+  - path: fxcop-report.xml
+    name: FxCop  
+  
