--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ after_build:
     "C:\Program Files (x86)\Microsoft Fxcop 10.0\FxCopCmd.exe" /project:.\src\ProjectSample.FxCop /out:fxcop-report.xml
 
 test_script:
-  - ps: .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user  -output:opencoverCoverage.xml -target:"vstest.console.exe" -targetargs:"/logger:Appveyor \"%cd%\src\ProjectSample.Infrastructure.Framework.UnitTests\bin\DEV\ProjectSample.Infrastructure.Framework.UnitTests.dll\" \"%cd%\src\ProjectSample.Domain.UnitTests\bin\DEV\ProjectSample.Domain.UnitTests.dll\"" -targetdir:"%cd%\src\ProjectSample.Domain.UnitTests\bin\DEV" -filter:"+[*]ProjectSample.* -[*.UnitTests]*"
+  - ps: .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user  -output:opencoverCoverage.xml -target:"vstest.console.exe" -targetargs:"/logger:Appveyor \"src\ProjectSample.Infrastructure.Framework.UnitTests\bin\$env:CONFIGURATION\ProjectSample.Infrastructure.Framework.UnitTests.dll\" \"src\ProjectSample.Domain.UnitTests\bin\$env:CONFIGURATION\ProjectSample.Domain.UnitTests.dll\"" -targetdir:"src\ProjectSample.Domain.UnitTests\bin\$env:CONFIGURATION" -filter:"+[*]ProjectSample.* -[*.UnitTests]*"
   - ps: .\src\packages\coveralls.net.0.6.0\tools\csmacnz.Coveralls.exe --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
 
 artifacts:
