--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ after_build:
 
 test_script:
   - cmd: >-
-     .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user  -output:opencoverCoverage.xml -target:"vstest.console.exe" -targetargs:"\"%cd%\src\SampleProject.Infrastructure.Framework.UnitTests\bin\$env:CONFIGURATION\SampleProject.Infrastructure.Framework.UnitTests.dll\" \"%cd%\src\SampleProject.Domain.UnitTests\bin\$env:CONFIGURATION\SampleProject.Domain.UnitTests.dll\"" -targetdir:"src\SampleProject.Domain.UnitTests\bin\$env:CONFIGURATION" -filter:"+[*]SampleProject.*"
+     .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user  -output:opencoverCoverage.xml -target:"vstest.console.exe" -targetargs:"\"%cd%\src\SampleProject.Infrastructure.Framework.UnitTests\bin\DEV\SampleProject.Infrastructure.Framework.UnitTests.dll\" \"%cd%\src\SampleProject.Domain.UnitTests\bin\DEV\SampleProject.Domain.UnitTests.dll\"" -targetdir:"src\SampleProject.Domain.UnitTests\bin\DEV" -filter:"+[*]SampleProject.*"
      
   - ps: .\src\packages\coveralls.net.0.6.0\tools\csmacnz.Coveralls.exe --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
 
