--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ after_build:
 - cmd: >-
     "C:\Program Files (x86)\Microsoft Fxcop 10.0\FxCopCmd.exe" /project:.\src\SampleProject.FxCop /out:.\tools\fxcop-report.xml
     
-    .\tools\DotBadge -b "FxCop:fxcop-report.xml" -output "..\docs\badges\FxCop.svg"
+    .\tools\DotBadge -b "FxCop:fxcop-report.xml" -output "docs\badges\FxCop.svg"
 
 on_success:
   - git config --global credential.helper store
