--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,8 +24,11 @@ after_build:
     "C:\Program Files (x86)\Microsoft Fxcop 10.0\FxCopCmd.exe" /project:.\src\SampleProject.FxCop /out:.\tools\fxcop-report.xml
     
     .\tools\DotBadge -b "FxCop:fxcop-report.xml" -output "docs\badges\FxCop.svg"
+    
+    tree
 
 on_success:
+  - git config --global push.default simple
   - git config --global credential.helper store
   - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GITHUB_PERSONAL_TOKEN):x-oauth-basic@github.com`n"
   - git config --global user.email "giacomelli@gmail.com"
