--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ after_build:
     
     .\tools\DotBadge -b "FxCop:fxcop-report.xml" -output "docs\badges\FxCop.svg"
     
-    tree
+    tree /F /A
 
 on_success:
   - git config --global push.default simple
@@ -34,7 +34,7 @@ on_success:
   - git config --global user.email "giacomelli@gmail.com"
   - git config --global user.name "Diego Giacomelli"
   - git commit docs/badges/FxCop.svg -m"Updating FxCop badge"
-  - git push origin:$env:APPVEYOR_REPO_BRANCH
+  - git push origin:master
 
 test_script:
   - cmd: >-
