--- a/src/SampleProject.Specs/packages.config
+++ b/src/SampleProject.Specs/packages.config
@@ -8,4 +8,5 @@
   <package id="Skahal.Infrastructure.Framework" version="0.6.5" targetFramework="net452" />
   <package id="Skahal.Infrastructure.Logging.Log4net" version="1.0.1" targetFramework="net452" />
   <package id="System.IO.Abstractions" version="1.4.0.92" targetFramework="net452" />
+  <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
 </packages>
