--- a/src/SampleProject.WebApp/Web.config
+++ b/src/SampleProject.WebApp/Web.config
@@ -24,6 +24,14 @@
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+  
+     <globalization
+      fileEncoding="utf-8" 
+      requestEncoding="utf-8" 
+      responseEncoding="utf-8"
+      culture="en-US"
+      uiCulture="en-US"
+    />
   </system.web>
   <system.webServer>
     <modules>
