Added choco install resharper-clt.portable.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,10 +6,13 @@ environment:
     secure: d9CuOgfF+/COpYZhww7xM+674WKgRkl0pHcLjF0XK8aDBAXh3BM6tul5QCbRaf3Y
    
 install:
+  choco install resharper-clt.portable
+  
 - cmd: 
 nuget:
   account_feed: false
   project_feed: false
+  
 before_build:
 - cmd: nuget restore .\src\SampleProject.sln
 
