Fix BadgesSharpCmd path.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ after_build:
     
     C:\ProgramData\chocolatey\lib\resharper-clt.portable\tools\dupfinder.exe /output=.\tools\dupFinderReport.xml /show-text .\src\SampleProject.sln
     
-    .\tools\BadgesSharp\BadgesSharp\BadgesSharpCmd.exe "https://github.com/giacomelli/SampleProject" DupFinder .\tools\dupFinderReport.xml
+    .\tools\BadgesSharp\BadgesSharpCmd.exe "https://github.com/giacomelli/SampleProject" DupFinder .\tools\dupFinderReport.xml
 
 test_script:
   - cmd: >-
